tests/nested_type_member_name_conflict_bad.hop
// Verifies nested type member name conflict is rejected.
struct Thing {
	value i64
	struct value {
		x i64
	}
}
